--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,6 +12,7 @@ body {
   min-height: 100vh;
   overflow-x: hidden;
   background-color: #161616;
+  font-family: 'Montserrat', sans-serif;
 }
 
 *,
