--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
+
 body {
-	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-		sans-serif;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	box-sizing: border-box;
-	font-size: 62.5%;
-	min-height: 100vh;
-	overflow-x: hidden;
-	background-color: rgb(16, 15, 29);
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  font-size: 62.5%;
+  min-height: 100vh;
+  overflow-x: hidden;
+  background-color: #161616;
+  font-family: 'Montserrat', sans-serif;
 }
 
 *,
 *:before,
 *:after {
-	box-sizing: inherit;
-	margin: 0;
-	padding: 0;
-	list-style: none;
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 a:hover {
-	cursor: pointer;
+  cursor: pointer;
 }
